k8s/network/agent-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: agent-allow
  namespace: soc

spec:
  podSelector:
    matchLabels:
      app: ai-agent

  policyTypes:
    - Egress

  egress:

    # Call SOC
    - to:
        - podSelector:
            matchLabels:
              app: soc

      ports:
        - protocol: TCP
          port: 5000

    # Call Ollama
    - to:
        - podSelector:
            matchLabels:
              app: ollama

      ports:
        - protocol: TCP
          port: 11434

    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
