k8s/network/ollama-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ollama-allow
  namespace: soc

spec:
  podSelector:
    matchLabels:
      app: ollama

  policyTypes:
    - Ingress
    - Egress

  ingress:

    # SOC
    - from:
        - podSelector:
            matchLabels:
              app: soc

      ports:
        - protocol: TCP
          port: 11434

    # Agent
    - from:
        - podSelector:
            matchLabels:
              app: ai-agent

      ports:
        - protocol: TCP
          port: 11434

  egress:

    # DNS only
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
