k8s/network/soc-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: soc-allow
  namespace: soc

spec:
  podSelector:
    matchLabels:
      app: soc

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: ai-agent

      ports:
        - protocol: TCP
          port: 5000

  egress:

    # Call Backend in scada-system namespace
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: scada-system

          podSelector:
            matchLabels:
              app: backend

      ports:
        - protocol: TCP
          port: 8000

    # Call Ollama
    - to:
        - podSelector:
            matchLabels:
              app: ollama

      ports:
        - protocol: TCP
          port: 11434

    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

      ports:
        - protocol: UDP
          port: 53

        - protocol: TCP
          port: 53
